0.16 -- ?? March 2018
+ Pi2/Pi3 support

0.15 -- 20 May 2016
+ new syscalls: chdir,nanosleep
+ More comlpete stats in sysinfo
+ MMU: Mark kernel and I/O pages as system-mode only
+ Add waitqueues, have blocking I/O in console_read and nanosleep
+ Userspace: split off vlibc, improve strerror()

0.14 -- 18 May 2016
+ new syscalls: uname,sysinfo,times
+ supports subdirectories
+ ll (assembly language linux_logo) works

0.13 -- 13 May 2016
+ new syscalls: open,read,vfork,execve,waitpid,stat,exit,getdents
+ cache/branch prediction enabled
+ simple 1:1 MMU (needed for L1-dcache)
+ simple blocking I/O for waitpid
+ dynamically allocate processes
+ proper round-robin scheduler with idle task
+ read-only romfs support
+ ramdisk blockdevice
+ process command line arguments
+ full color ANSI terminal framebuffer support
+ userspace utilities: cat, ls, hello
+ arm1176 performance counter measurements
+ bcm2835 random number generator
+ optimized memset()

0.12 -- 29 February 2016
+ major file layout restructuring
+ ps/2 keyboard gpio bitbanged support
+ uart: now interrupt driven
+ timer now runs at 64Hz
+ move most of interrupt handler to be C
+ bcm2835 temperature driver
+ automatically convert \n to \r\n

0.11 --  7 January 2016
+ new syscalls: reboot,time,getpid
+ add gpio helper code (modeled on Linux interface)
+ Fix build on gcc-4.9 (mostly inline assembly issues)
+ Executables loaded from romfs image
+ simple multi-tasking
+ framebuffer scrolling
+ userspace processes

0.10 -- 21 April 2015
+ simple HDMI framebuffer support
+ add firmware mailbox support

0.03 -- 26 February 2015
+ new syscalls: write,blink
+ Heartbeat ACT LED
+ Rudimentary in-kernel monitor shell
+ Support device detection (BPLUS vs B)

0.02 -- 4 February 2015
+ ATAGs parsing
+ UART/serial console support
+ Simple interrupt handler

0.01 --23 January 2015
+ Simple bare-metal ACT LED blinking code