@@ -5,34 +5,39 @@ INCLUDE = -I../include
 
 all:	boot-armv7.a boot-arm1176.a
 
-boot-armv7.a:	atags.armv7.o boot-armv7.o device_tree.armv7.o
-	$(CROSS)$(AR) crs boot-armv7.a atags.armv7.o boot-armv7.o device_tree.armv7.o
+#### ARM1176
 
-boot-arm1176.a:	atags.arm1176.o boot-arm1176.o device_tree.arm1176.o
-	$(CROSS)$(AR) crs boot-arm1176.a atags.arm1176.o boot-arm1176.o device_tree.arm1176.o
-
-atags.armv7.o:	atags.c
-	$(CROSS)$(CC) $(CFLAGS_ARMV7) $(INCLUDE) -o atags.armv7.o -c atags.c
+boot-arm1176.a:	atags.arm1176.o boot-arm1176.o device_tree.arm1176.o hardware_detect.arm1176.o
+	$(CROSS)$(AR) crs boot-arm1176.a atags.arm1176.o boot-arm1176.o device_tree.arm1176.o hardware_detect.arm1176.o
 
 atags.arm1176.o:	atags.c
 	$(CROSS)$(CC) $(CFLAGS_ARM1176) $(INCLUDE) -o atags.arm1176.o -c atags.c
 
-###
-
-boot-armv7.o:	boot-armv7.s
-	$(CROSS)as $(ASFLAGS_ARMV7) $(INCLUDE) -o boot-armv7.o boot-armv7.s
-
 boot-arm1176.o:	boot-arm1176.s
 	$(CROSS)as $(ASFLAGS_ARM1176) $(INCLUDE) -o boot-arm1176.o boot-arm1176.s
-
-###
-
-device_tree.armv7.o:	device_tree.c
-	$(CROSS)$(CC) $(CFLAGS_ARMV7) $(INCLUDE) -o device_tree.armv7.o -c device_tree.c
 
 device_tree.arm1176.o:	device_tree.c
 	$(CROSS)$(CC) $(CFLAGS_ARM1176) $(INCLUDE) -o device_tree.arm1176.o -c device_tree.c
 
+hardware_detect.arm1176.o:	hardware_detect.c
+	$(CROSS)$(CC) $(CFLAGS_ARM1176) $(INCLUDE) -o hardware_detect.arm1176.o -c hardware_detect.c
+
+#### AMV7
+
+boot-armv7.a:	atags.armv7.o boot-armv7.o device_tree.armv7.o hardware_detect.armv7.o
+	$(CROSS)$(AR) crs boot-armv7.a atags.armv7.o boot-armv7.o device_tree.armv7.o hardware_detect.armv7.o
+
+atags.armv7.o:	atags.c
+	$(CROSS)$(CC) $(CFLAGS_ARMV7) $(INCLUDE) -o atags.armv7.o -c atags.c
+
+boot-armv7.o:	boot-armv7.s
+	$(CROSS)as $(ASFLAGS_ARMV7) $(INCLUDE) -o boot-armv7.o boot-armv7.s
+
+device_tree.armv7.o:	device_tree.c
+	$(CROSS)$(CC) $(CFLAGS_ARMV7) $(INCLUDE) -o device_tree.armv7.o -c device_tree.c
+
+hardware_detect.armv7.o:	hardware_detect.c
+	$(CROSS)$(CC) $(CFLAGS_ARMV7) $(INCLUDE) -o hardware_detect.armv7.o -c hardware_detect.c
 
 ###
 
