@@ -4,7 +4,7 @@
 #include "drivers/bcm2835/bcm2835_periph.h"
 #include "drivers/led/led.h"
 
-#include "hardware.h"
+#include "boot/hardware_detect.h"
 #include "drivers/gpio/gpio.h"
 #include "lib/printk.h"
 #include "errors.h"
@@ -22,18 +22,18 @@ int led_init(void) {
 
 	/* On the Model B this is 16, on the B+/A+ this is 47 */
 	/* Model B is active low, B+/A+ active high */
-	if ((hardware_type==RPI_MODEL_B) ||
-	 	(hardware_type==RPI_MODEL_A)) {
+	if ((hardware_get_type()==RPI_MODEL_B) ||
+	 	(hardware_get_type()==RPI_MODEL_A)) {
 		led_gpio=16;
 		led_active_low=1;
 	}
-	else if ((hardware_type==RPI_MODEL_BPLUS) ||
-	 	(hardware_type==RPI_MODEL_APLUS) ||
-		(hardware_type==RPI_MODEL_2B)) {
+	else if ((hardware_get_type()==RPI_MODEL_BPLUS) ||
+	 	(hardware_get_type()==RPI_MODEL_APLUS) ||
+		(hardware_get_type()==RPI_MODEL_2B)) {
 		led_gpio=47;
 		led_active_low=0;
 	}
-	else if ((hardware_type==RPI_MODEL_3B)) {
+	else if ((hardware_get_type()==RPI_MODEL_3B)) {
 		/* Not ACT LED, just one we have hooked to GPIO18 */
 		led_gpio=18;
 		led_active_low=0;
